# Flight-Analysis-Time-Series

./: Makefile  README.md  pyproject.toml  requirements.txt
scripts/: feature_engineering.py  train_model.py
sql/: clean_flights.sql  eda_queries.sql
tests/: test_feature_engineering.py  test_features.py
