[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.backends.legacy:build"
[project]
name = "flight-delay-prediction"
version = "1.0.0"
description = "End-to-end MLOps pipeline for flight delay prediction on GCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name="Jaimin Babariya",email="jaiminbabariya7@gmail.com"}]
keywords = ["mlops","bigquery","airflow","flight-delay","gcp"]
[project.optional-dependencies]
dev = ["pytest>=7.4","pytest-cov>=4.1","black>=23.0","isort>=5.12"]
[tool.black]
line-length = 100
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"